# arcanum-app

./: .env.example  .gitignore  Procfile  README.md  app.py  arcanum.ipynb  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  errors.py  extensions.py
app/forms/: __init__.py  auth_form.py  auth_forms.py  chat_form.py  message_form.py
app/hooks/: __init__.py  auth_hooks.py  csrf_hooks.py
app/logs/: __init__.py  chats_logs.py  messages_logs.py  search_logs.py
app/models/: __init__.py  chat.py  filters.py  message.py  models.py
app/routes/: __init__.py  auth.py  chats.py  dashboard.py  health.py  home.py  lang.py  messages.py  search.py
app/services/: __init__.py  chats_service.py  chats_service_sqlite.py  filters_service.py  messages_service.py  messages_service_sqlite.py
app/services/dao/: __init__.py  chats_dao.py  chats_dao_sqlite.py  filters_dao.py  filters_dao_sqlite.py  messages_dao.py
app/static/css/: style.css
app/static/js/: auth.js  base.js  (+1 more)
app/templates/: base.html  dashboard.html  error.html  index.html  login.html
app/utils/: __init__.py  backblaze_utils.py  chat_form_validators.py  chats_utils.py  cloudinary_utils.py  db_utils.py  db_utils_sqlite.py  db_utils_sqllite.py  decorators.py  filters_utils.py  form_utils.py  i18n_utils.py  logging_utils.py  messages_utils.py  model_utils.py  slugify_utils.py  sort_utils.py  sql_utils.py  time_utils.py
migrations/: add_idx_messages_nonempty_media.sql
static/css/: style.css
templates/: base.html  dashboard.html  index.html  login.html
templates/chats/: index.html
(+93 files in other folders)
