[tool.poetry]
name = "arcanum-app"
version = "0.1.0"
description = ""
authors = ["Arthur Ratsa <rheni.light@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.1.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
colorlog = "^6.9.0"
d = "^0.2.2"
flask-wtf = "^1.2.2"
cloudinary = "^1.44.1"
pillow = "^11.2.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
boto3 = "^1.38.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
